updating metrics for global

--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -199,22 +199,60 @@
     }
    ],
    "source": [
-    "f = open('tests/global_test.csv', 'r')\n",
-    "data=f.read()\n",
-    "f.close()\n",
+    "import pydp as dp\n",
+    "from pydp.algorithms.laplacian import *\n",
+    "import random\n",
+    "import sys\n",
+    "from scripts.algorithms.globaldp.global_algos import global_bounded_algo\n",
+    "import statistics\n",
     "\n",
-    "gb= csv_to_df(data)\n",
+    "# Generate list of random values, 0 - 100\n",
+    "vals = []\n",
     "\n",
+    "for i in range(0, 10000):\n",
+    "    val = random.randint(0, 100)\n",
+    "    vals.append(val)\n",
     "\n",
-    "dfname = gb[gb['statistic'] == 'bounded_mean']\n",
+    "# True statistics\n",
+    "real_gb_mean = statistics.mean(vals)\n",
     "\n",
-    "dfname['error']= pow((49.9631- dfname['result']),2)\n",
+    "nb_seed_gb = 15\n",
     "\n",
-    "dfname.plot.line(x='epsilon', y='error')\n",
+    "lst_eps = np.arange(0.5, 5.1, 0.5)\n",
     "\n",
-    "plt.title(\"Global DP Mean - Error-rate vs Epsilon\")\n",
+    "dic_mse_gb = {seed: \n",
+    "               {\n",
+    "                \"gb_test\": [],\n",
+    "               } \n",
+    "               for seed in range(nb_seed_gb)\n",
+    "          }\n",
     "\n",
-    "plt.show()\n"
+    "for seed in range(nb_seed_gb):\n",
+    "    print('Starting w/ seed:', seed)\n",
+    "\n",
+    "    for gb_eps in lst_eps:\n",
+    "        gb_est_mean=global_bounded_algo(vals, gb_eps, 'bounded_mean')\n",
+    "        dic_mse_gb[seed][\"gb_test\"].append(np.square(np.subtract(real_gb_mean, gb_est_mean)))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,5))\n",
+    "plt.grid(color='grey', linestyle='dashdot', linewidth=0.5)\n",
+    "plt.plot(np.mean([dic_mse_gb[seed][\"gb_test\"] for seed in range(nb_seed_gb)], axis=0),label='OUE',marker='s',color=\"red\")\n",
+    "\n",
+    "plt.yscale('log')\n",
+    "plt.xlabel('$\\epsilon$ epsilon')\n",
+    "plt.ylabel('Mean Squared Error')\n",
+    "plt.xticks(range(len(lst_eps)), lst_eps)\n",
+    "plt.title(\"[Mean] Global DP vs Raw Data Error ~ Epsilon\")\n",
+    "plt.show()"
    ]
   }
  ],
